--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Microsoft.Demos.Alexa.Luis/bin
+/Microsoft.Demos.Alexa.Luis/obj
