Redirected LUIS url to dog food vendor model.

--- a/Microsoft.Demos.Alexa.Luis/appsettings.json
+++ b/Microsoft.Demos.Alexa.Luis/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Luis": {
-    "Url": "https://westeurope.api.cognitive.microsoft.com/luis/v2.0/apps/056c8e17-d6d7-4436-9a88-a0a07b98fffa",
-    "Key": "9aee705651284d4bbfe4a14b6ba16be9"
+    "Url": "https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/1736b473-b877-4983-a322-6dce2b6b730d",
+    "Key": "a474c95e7604475d9b1e1d05e381c496"
   },
   "Logging": {
     "IncludeScopes": false,
